# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
# + CMakeLists.txt
# + Folder: src/Praktikum-CMake/Apps
# +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

add_executable(helloworld helloworld-main.cpp )
add_executable(hellostudent hellostudent-main Greetings)